<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    
    <item
        android:id="@+id/nav_training"
        android:icon="@drawable/ic_training"
        android:title="@string/nav_training" />
    
    <item
        android:id="@+id/nav_diet"
        android:icon="@drawable/ic_diet"
        android:title="@string/nav_diet" />
    
    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/ic_data"
        android:title="@string/nav_data" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
        
</menu>
