<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.vere.fit8.ui.fragment.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_training"
        android:name="com.vere.fit8.ui.fragment.TrainingFragment"
        android:label="@string/nav_training"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_diet"
        android:name="com.vere.fit8.ui.fragment.DietFragment"
        android:label="@string/nav_diet"
        tools:layout="@layout/fragment_diet" />

    <fragment
        android:id="@+id/nav_data"
        android:name="com.vere.fit8.ui.fragment.DataFragment"
        android:label="@string/nav_data"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.vere.fit8.ui.fragment.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
